test/ui/tests/fail/class-async-borrowed-channel.stderr
error: Expected `&mut Cx` instead of a `Channel` reference.
 --> tests/fail/class-async-borrowed-channel.rs:8:28
  |
8 |     fn method(&self, _ch: &Channel) {}
  |                            ^^^^^^^

error[E0277]: the trait bound `Example: Default` is not satisfied
 --> tests/fail/class-async-borrowed-channel.rs:5:1
  |
5 | #[neon::class]
  | ^^^^^^^^^^^^^^ the trait `Default` is not implemented for `Example`
  |
  = note: this error originates in the attribute macro `neon::class` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Example` with `#[derive(Default)]`
  |
3 + #[derive(Default)]
4 | struct Example;
  |
